app/assets/stylesheets/lineitem.css.scss
.table-container {
  .table {
    .name {
    }

    .status {
      max-width: 20px;
      width:20px;
    }

    .start_date {
      width: 100px;
      text-align: center;
    }

    .end_date {
      width: 100px;
      text-align: center;
    }

    .volume {
      width: 100px;
      text-align: right;
    }

    .rate {
      width: 100px;
      text-align: right;
    }

    .media-cost {
      width: 100px;
      text-align: right;
    }

    .active {
      color: $active-color;
    }

    .inactive {
      color: $inactive-color;
    }
  }
}

.flight-input {
  line-height: 18px;
  padding: 6px;
  border: 1px solid #CCCCCC;
  border-radius: 4px;
  cursor: pointer;
  vertical-align: middle;
  background-color: #fff;

  .caret {
    margin-left: 2px;
    margin-top: 8px;
  }
}

.volume-input {
  width: 96px;
  text-align: right;
}

.rate-input {
  width: 69px;
  text-align: right;
}

.ad-size-list {
  min-width: 528px;
  max-width: 1036px;

  .ad-size {
    float: left;
    padding: 5px;
    width: 102px;
    cursor: pointer;
    margin: 0 10px 5px 0;
    border-radius: 5px;

    &:hover {
      background-color: #ccc;
    }

    input {
      margin-top: -1px;
    }
  }

  .selected {
    background-color: #ccc;
  }
}

form fieldset {
  background: none repeat scroll 0 0 #F7F7F7;
  border-radius: 5px 5px 5px 5px;
  padding-bottom: 10px;
  padding-top: 10px;
  margin-bottom: 10px;

  .actions {
    padding: 0 10px;
  }
}

.lineitem-details {
  padding: 5px 10px;
}

